GNOME Bugzilla – Bug 780381
Fix a couple of errors and warnings
Last modified: 2017-03-22 17:54:08 UTC
See patches.
Created attachment 348454 [details] [review] calendar-server: Remove unused variables and function The code that used them was removed in commit 7e0e224e0eb8.
Created attachment 348455 [details] [review] st: Add missing %NULL check st_theme_node_get_border_image() may return %NULL, leading to a segfault in st_border_image_get_file() when glib is compiled with G_DISABLE_CHECKS.
Review of attachment 348454 [details] [review]: sure
Review of attachment 348455 [details] [review]: looks fine
Attachment 348454 [details] pushed as 5de85c7 - calendar-server: Remove unused variables and function Attachment 348455 [details] pushed as b477d21 - st: Add missing %NULL check