calendar-server: Remove unused variables and function

The code that used them was removed in commit 7e0e224e0eb8.

https://bugzilla.gnome.org/show_bug.cgi?id=780381